--- a/LibraryTester/LibraryTester.csproj
+++ b/LibraryTester/LibraryTester.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NeuralNetLIB\NeuralNetLIB.csproj" />
+    <ProjectReference Include="..\MachineLearningLIB\MachineLearningLIB.csproj" />
   </ItemGroup>
 
 </Project>
