--- a/MachineLearningLIB/MachineLearningLIB.csproj
+++ b/MachineLearningLIB/MachineLearningLIB.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="LearningAlgorithms\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MathNet.Numerics" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
